--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,4 +1,4 @@
-- apiVersion: fraima.config.k8s.io/v1beta1
+- apiVersion: kubelet.config.k8s.io/v1beta1
   kind: KubeletConfiguration
   extraArgs:
     staticPodPath: node.kubernetes.io/worker
