--- a/config-example.yaml
+++ b/config-example.yaml
@@ -3,3 +3,15 @@
   extraArgs:
     staticPodPath: node.kubernetes.io/worker
     staticPodURL: external
+
+- apiVersion: kubelet.config.k8s.io/v1beta1
+  kind: KubeletService
+  extraArgs:
+    staticPodPath: node.kubernetes.io/worker
+    staticPodURL: external
+
+- apiVersion: kubelet.config.k8s.io/v1beta1
+  kind: K8sConfiguration
+  extraArgs:
+    - staticPodPath
+    - staticPodURL
