--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,23 +1,64 @@
-- apiVersion: { { APIVERSION } }
-  kind: KubeletService
-  extraArgs: { { key - value } }
 
-- apiVersion: { { APIVERSION } }
+- apiVersion: fraima.io/v1alpha
   kind: KubeletConfiguration
-  extraArgs: { { key - value } }
-
-- apiVersion: Х{ APIVERSION }}
-  kind: ContainerdService
-  extraArgs: { { key - value } }
-
-- apiVersion: { { APIVERSION } }
-  kind: ContainerdConfiguration
-  extraArgs: { { key - value } }
-
-- apiVersion: { { APIVERSION } }
-  kind: SysctlNetworkConfiguration
-  extraArgs: { { key - value } }
-
-- apiVersion: { { APIVERSION } }
-  kind: ModProbConfiguration
-  extraArgs: { { array } }
+  extraArgs:
+    authentication:
+      anonymous:
+        enabled: false
+      webhook:
+        cacheTTL: 0s
+        enabled: true
+    authorization:
+      mode: Webhook
+      webhook:
+        cacheAuthorizedTTL: 0s
+        cacheUnauthorizedTTL: 0s
+    cgroupDriver: systemd
+    clusterDNS:
+      - "28.0.0.1"
+    clusterDomain: cluster.local
+    cpuManagerReconcilePeriod: 0s
+    evictionPressureTransitionPeriod: 0s
+    fileCheckFrequency: 0s
+    healthzBindAddress: 127.0.0.1
+    healthzPort: 10248
+    httpCheckFrequency: 0s
+    imageMinimumGCAge: 0s
+    logging:
+      flushFrequency: 0
+      options:
+        json:
+          infoBufferSize: "0"
+      verbosity: 0
+    memorySwap: {}
+    nodeStatusReportFrequency: 1s
+    nodeStatusUpdateFrequency: 1s
+    #resolvConf: /run/systemd/resolve/resolv.conf
+    rotateCertificates: false
+    runtimeRequestTimeout: 0s
+    serverTLSBootstrap: true
+    shutdownGracePeriod: 15s
+    shutdownGracePeriodCriticalPods: 5s
+    streamingConnectionIdleTimeout: 0s
+    syncFrequency: 0s
+    volumeStatsAggPeriod: 0s
+    containerLogMaxSize: 50Mi
+    maxPods: 250
+    kubeAPIQPS: 50
+    kubeAPIBurst: 100
+    podPidsLimit: 4096
+    serializeImagePulls: false
+    systemReserved:
+      ephemeral-storage: 1Gi
+    featureGates:
+      RotateKubeletServerCertificate: true
+      APIPriorityAndFairness: true
+      DownwardAPIHugePages: true
+      PodSecurity: true
+      CSIMigrationAWS: false
+      CSIMigrationAzureFile: false
+      CSIMigrationGCE: false
+      CSIMigrationvSphere: false
+    rotateCertificates: false
+    serverTLSBootstrap: true
+    tlsMinVersion: VersionTLS12
