--- a/config-example.yaml
+++ b/config-example.yaml
@@ -37,7 +37,7 @@
     memorySwap: {}
     nodeStatusReportFrequency: 1s
     nodeStatusUpdateFrequency: 1s
-    #resolvConf: /run/systemd/resolve/resolv.conf
+    resolvConf: /run/systemd/resolve/resolv.conf
     rotateCertificates: false
     runtimeRequestTimeout: 0s
     serverTLSBootstrap: true
