--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,84 +1,12 @@
-- apiVersion: fraimactl.io/v1alpha
-  kind: KubeletService
-  extraArgs: 
-
-
-- apiVersion: kubelet.config.k8s.io/v1beta1
-  kind: KubeletConfiguration
-  extraArgs:
-    authentication:
-      anonymous:
-        enabled: false
-      webhook:
-        cacheTTL: 0s
-        enabled: true
-    authorization:
-      mode: Webhook
-      webhook:
-        cacheAuthorizedTTL: 0s
-        cacheUnauthorizedTTL: 0s
-    cgroupDriver: systemd
-    clusterDNS:
-      - "28.0.0.1"
-    clusterDomain: cluster.local
-    cpuManagerReconcilePeriod: 0s
-    evictionPressureTransitionPeriod: 0s
-    fileCheckFrequency: 0s
-    healthzBindAddress: 127.0.0.1
-    healthzPort: 10248
-    httpCheckFrequency: 0s
-    imageMinimumGCAge: 0s
-    logging:
-      flushFrequency: 0
-      options:
-        json:
-          infoBufferSize: "0"
-      verbosity: 0
-    memorySwap: {}
-    nodeStatusReportFrequency: 1s
-    nodeStatusUpdateFrequency: 1s
-    resolvConf: /run/systemd/resolve/resolv.conf
-    rotateCertificates: false
-    runtimeRequestTimeout: 0s
-    serverTLSBootstrap: true
-    shutdownGracePeriod: 15s
-    shutdownGracePeriodCriticalPods: 5s
-    streamingConnectionIdleTimeout: 0s
-    syncFrequency: 0s
-    volumeStatsAggPeriod: 0s
-    containerLogMaxSize: 50Mi
-    maxPods: 250
-    kubeAPIQPS: 50
-    kubeAPIBurst: 100
-    podPidsLimit: 4096
-    serializeImagePulls: false
-    systemReserved:
-      ephemeral-storage: 1Gi
-    featureGates:
-      RotateKubeletServerCertificate: true
-      APIPriorityAndFairness: true
-      DownwardAPIHugePages: true
-      PodSecurity: true
-      CSIMigrationAWS: false
-      CSIMigrationAzureFile: false
-      CSIMigrationGCE: false
-      CSIMigrationvSphere: false
-    rotateCertificates: false
-    serverTLSBootstrap: true
-    tlsMinVersion: VersionTLS12
-
-- apiVersion: fraimactl.io/v1alpha
-  kind: ContainerdService
-  extraArgs:
-
-- apiVersion: fraimactl.io/v1alpha
+- apiVersion: fraima.io/v1alpha
   kind: ContainerdConfiguration
   extraArgs:
-
-- apiVersion: fraimactl.io/v1alpha
-  kind: SysctlNetworkConfiguration
-  extraArgs:
-
-- apiVersion: fraimactl.io/v1alpha
-  kind: ModProbConfiguration
-  extraArgs:
+    version: 2
+    plugins:
+      io.containerd.grpc.v1.cri:
+        containerd:
+          runtimes:
+            runc:
+              runtime_type: "io.containerd.runc.v2"
+              options:
+                SystemdCgroup: true
