--- a/config-example.yaml
+++ b/config-example.yaml
@@ -1,12 +1,18 @@
-- apiVersion: fraima.io/v1alpha
-  kind: ContainerdConfiguration
-  extraArgs:
-    version: 2
-    plugins:
-      io.containerd.grpc.v1.cri:
-        containerd:
-          runtimes:
-            runc:
-              runtime_type: "io.containerd.runc.v2"
-              options:
-                SystemdCgroup: true
+generating:
+  - apiVersion: fraima.io/v1alpha
+    kind: ContainerdConfiguration
+    extraArgs:
+      version: 2
+      plugins:
+        io.containerd.grpc.v1.cri:
+          containerd:
+            runtimes:
+              runc:
+                runtime_type: "io.containerd.runc.v2"
+                options:
+                  SystemdCgroup: true
+
+downloading:
+  - url: <url>
+    filepath: <path-to-save>
+    permission: <permission>
