--- a/config-debug.yaml
+++ b/config-debug.yaml
@@ -1,6 +1,52 @@
 - apiVersion: kubelet.config.k8s.io/v1beta1
   kind: KubeletConfiguration
   spec:
+    apiVersion: kubelet.config.k8s.io/v1beta1
+    kind: KubeletConfiguration
+    registerNode: true
+    authentication:
+      anonymous:
+        enabled: false
+      webhook:
+        cacheTTL: 0s
+        enabled: true
+      x509:
+        clientCAFile: "/etc/kubernetes/pki/ca/kubernetes-ca.pem"
+    authorization:
+      mode: Webhook
+      webhook:
+        cacheAuthorizedTTL: 0s
+        cacheUnauthorizedTTL: 0s
+    cgroupDriver: systemd
+    clusterDNS:
+      - "29.64.0.10"
+    clusterDomain: cluster.local
+    cpuManagerReconcilePeriod: 0s
+    evictionPressureTransitionPeriod: 0s
+    fileCheckFrequency: 0s
+    healthzBindAddress: 127.0.0.1
+    healthzPort: 10248
+    httpCheckFrequency: 0s
+    imageMinimumGCAge: 0s
+    logging:
+      flushFrequency: 0
+      options:
+        json:
+          infoBufferSize: "0"
+      verbosity: 0
+    memorySwap: {}
+    nodeStatusReportFrequency: 1s
+    nodeStatusUpdateFrequency: 1s
+    resolvConf: /run/systemd/resolve/resolv.conf
+    rotateCertificates: false
+    runtimeRequestTimeout: 0s
+    serverTLSBootstrap: true
+    shutdownGracePeriod: 15s
+    shutdownGracePeriodCriticalPods: 5s
+    staticPodPath: "/etc/kubernetes/manifests"
+    streamingConnectionIdleTimeout: 0s
+    syncFrequency: 0s
+    volumeStatsAggPeriod: 0s
     containerLogMaxSize: 50Mi
     maxPods: 250
     kubeAPIQPS: 50
@@ -30,18 +76,25 @@
       - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
     allowedUnsafeSysctls:
       - "net.core.somaxconn"
-    evictionSoft:
-      memory.available: 3Gi
+    evictionSoft: 
+      memory.available: 3Gi 
       nodefs.available: 25%
       nodefs.inodesFree: 15%
       imagefs.available: 30%
       imagefs.inodesFree: 25%
+    evictionSoftGracePeriod:  
+      memory.available: 2m30s
+      nodefs.available: 2m30s
+      nodefs.inodesFree: 2m30s
+      imagefs.available: 2m30s
+      imagefs.inodesFree: 2m30s
     evictionHard:
       memory.available: 2Gi
       nodefs.available: 20%
       nodefs.inodesFree: 10%
       imagefs.available: 25%
       imagefs.inodesFree: 15%
-    evictionPressureTransitionPeriod: 5s
+    evictionPressureTransitionPeriod: 5s 
+    imageMinimumGCAge: 12h 
     imageGCHighThresholdPercent: 55
     imageGCLowThresholdPercent: 50
