--- a/config-example.yaml
+++ b/config-example.yaml
@@ -3,7 +3,7 @@
   spec:
     - name: cotainerd
       src: https://github.com/containerd/containerd/releases/download/v1.6.6/containerd-1.6.6-linux-amd64.tar.gz
-      check_sum:
+      checkSum:
         src: "path"
         type: "sha256|md5"
       path: /usr/bin/
