--- a/config-debug.yaml
+++ b/config-debug.yaml
@@ -1,32 +1,12 @@
 - apiVersion: fraima.io/v1alpha
-  kind: ComponentName
+  kind: Containerd
   spec:
-    service:
-      type: containerd
-      extraArgs:
-        config: /etc/kubernetes/containerd/config.toml
-    configuration:
-      extraArgs:
-        version: 2
-        plugins:
-          io.containerd.grpc.v1.cri:
-            containerd:
-              runtimes:
-                runc:
-                  # Runtime v2 introduces a first class shim API for runtime authors to integrate with containerd.
-                  # The shim API is minimal and scoped to the execution lifecycle of a container.
-                  runtime_type: "io.containerd.runc.v2"
-                  options:
-                    # While containerd and Kubernetes use the legacy cgroupfs driver for managing cgroups by default,
-                    # it is recommended to use the systemd driver on systemd-based hosts for compliance of the "single-writer" rule of cgroups.
-                    # To configure containerd to use the systemd driver, set the following option:
-                    SystemdCgroup: true
     downloading:
-      - name: containerd
+      - name: cotainerd
         src: https://github.com/containerd/containerd/releases/download/v1.6.6/containerd-1.6.6-linux-amd64.tar.gz
         checkSum:
-          src: "path"
-          type: "sha256|md5"
+          src: https://github.com/containerd/containerd/releases/download/v1.6.6/containerd-1.6.6-linux-amd64.tar.gz.sha256sum
+          type: "sha256"
         path: /usr/bin/
         owner: root:root
         permission: 0645
@@ -39,3 +19,22 @@
             - bin/containerd-shim-runc-v2
             - bin/containerd-stress
             - bin/ctr
+
+      - name: crictl
+        src: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.26.0/crictl-v1.26.0-linux-amd64.tar.gz
+        path: /usr/bin/
+        checkSum:
+          src: https://github.com/kubernetes-sigs/cri-tools/releases/download/v1.26.0/crictl-v1.26.0-linux-amd64.tar.gz.sha256
+          type: "sha256"
+        owner: root:root
+        permission: 0645
+        unzip:
+          status: true
+          files:
+            - "crictl"
+
+      - name: runc
+        src: https://github.com/opencontainers/runc/releases/download/v1.1.3/runc.amd64
+        path: /usr/bin/
+        owner: root:root
+        permission: 0645
