--- a/config-example.yaml
+++ b/config-example.yaml
@@ -92,7 +92,105 @@
         # if and how the hostname is used). 
         # (DEPRECATED: will be removed in 1.24 or later, in favor of removing cloud provider code from Kubelet.)
         cloud-provider: external
-    # configuration: {}
+    configuration:
+      apiVersion: kubelet.config.k8s.io/v1beta1
+      kind: KubeletConfiguration
+      registerNode: true
+
+      tlsCertFile: kubelet-server.pem
+      tlsPrivateKeyFile: kubelet-server-key.pem
+
+      authentication:
+        anonymous:
+          enabled: false
+        webhook:
+          cacheTTL: 0s
+          enabled: true
+        x509:
+          clientCAFile: "kubernetes-ca.pem"
+      authorization:
+        mode: Webhook
+        webhook:
+          cacheAuthorizedTTL: 0s
+          cacheUnauthorizedTTL: 0s
+      cgroupDriver: systemd
+      clusterDNS:
+        - 29.64.0.10
+      clusterDomain: cluster.local
+      cpuManagerReconcilePeriod: 0s
+      fileCheckFrequency: 0s
+      healthzBindAddress: 127.0.0.1
+      healthzPort: 10248
+      httpCheckFrequency: 0s
+      imageMinimumGCAge: 0s
+      logging:
+        flushFrequency: 0
+        options:
+          json:
+            infoBufferSize: "0"
+        verbosity: 0
+      memorySwap: {}
+      nodeStatusReportFrequency: 1s
+      nodeStatusUpdateFrequency: 1s
+      resolvConf: /run/systemd/resolve/resolv.conf
+      runtimeRequestTimeout: 0s
+      shutdownGracePeriod: 15s
+      shutdownGracePeriodCriticalPods: 5s
+      staticPodPath: "/etc/kubernetes/manifests"
+      streamingConnectionIdleTimeout: 0s
+      syncFrequency: 0s
+      volumeStatsAggPeriod: 0s
+      containerLogMaxSize: 50Mi
+      maxPods: 250
+      kubeAPIQPS: 50
+      kubeAPIBurst: 100
+      podPidsLimit: 4096
+      serializeImagePulls: false
+      systemReserved:
+        ephemeral-storage: 1Gi
+      featureGates:
+        RotateKubeletServerCertificate: true
+        APIPriorityAndFairness: true
+        DownwardAPIHugePages: true
+        PodSecurity: true
+        CSIMigrationAWS: false
+        CSIMigrationAzureFile: false
+        CSIMigrationGCE: false
+        CSIMigrationvSphere: false
+      rotateCertificates: false
+      serverTLSBootstrap: true
+      tlsMinVersion: VersionTLS12
+      tlsCipherSuites:
+        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+        - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305_SHA256
+        - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305_SHA256
+      allowedUnsafeSysctls:
+        - "net.core.somaxconn"
+      evictionSoft: 
+        memory.available: 3Gi 
+        nodefs.available: 25%
+        nodefs.inodesFree: 15%
+        imagefs.available: 30%
+        imagefs.inodesFree: 25%
+      evictionSoftGracePeriod:  
+        memory.available: 2m30s
+        nodefs.available: 2m30s
+        nodefs.inodesFree: 2m30s
+        imagefs.available: 2m30s
+        imagefs.inodesFree: 2m30s
+      evictionHard:
+        memory.available: 2Gi
+        nodefs.available: 20%
+        nodefs.inodesFree: 10%
+        imagefs.available: 25%
+        imagefs.inodesFree: 15%
+      evictionPressureTransitionPeriod: 5s 
+      imageGCHighThresholdPercent: 55
+      imageGCLowThresholdPercent: 50
+
     downloading:
       - name: kubelet
         src: https://dl.k8s.io/release/v1.23.12/bin/linux/amd64/kubelet
@@ -188,6 +286,7 @@
         path: /usr/bin/
         owner: root:root
         permission: 0645
+    configuration: {}
 
 - apiVersion: fraima.io/v1alpha
   kind: YandexCloud
