--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,21 +31,21 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          path: src/github.com/fraima/key-keeper
+          path: src/github.com/fraima/fraimactl
 
       - run: |
           make release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-        working-directory: src/github.com/fraima/key-keeper
+        working-directory: src/github.com/fraima/fraimactl
 
       - uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          artifacts: src/github.com/fraima/key-keeper/_output/releases/*
-          bodyFile: src/github.com/fraima/key-keeper/release-notes.md
+          artifacts: src/github.com/fraima/fraimactl/_output/releases/*
+          bodyFile: src/github.com/fraima/fraimactl/release-notes.md
 
       - uses: actions/upload-artifact@v2
         with:
           name: build-artifacts
-          path: src/github.com/fraima/key-keeper/_output
+          path: src/github.com/fraima/fraimactl/_output
